--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,6 +15,7 @@ body{
     width:80%;
     margin: auto;
     position: relative;
+    background-color: black;
 
 }
 .scores{
@@ -47,4 +48,49 @@ body{
     position: absolute;
     top:20px;
     right:20px;
+}
+#game-over-layer{
+    background-color: black;
+    position: absolute;
+    top:-100vh;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    transition:transform 2s;
+}
+#game-over-layer.transform{
+    transform: translateY(100vh);
+}
+.game-over{
+    position: absolute;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 50%;
+}
+#game-over-layer .restart-button{
+    position: absolute;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 63%;
+    font-size: 16px;
+}
+#game-start-layer{
+    background-image: url('../images/overworld_bg_plain1.png');
+    position: absolute;
+    z-index:100;
+    width: 100%;
+    height: 100%;
+    transition:transform 2s;
+    background-size: cover;
+    top:0;
+}
+#game-start-layer .restart-button{
+    position: absolute;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 63%;
+    font-size: 16px;
+}
+#game-start-layer .transform{
+    transform: translateY(-100vh);
 }
