--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,8 @@ body{
     flex-direction: column;
     width:80%;
     margin: auto;
+    position: relative;
+    background-color: black;
 
 }
 .scores{
@@ -37,4 +39,58 @@ body{
     width: 45px;
     background-repeat: no-repeat;
     background-position: center;
+}
+.restart-button{
+    font-size: 8px;
+    cursor: pointer;
+}
+.restart-button-wrap{
+    position: absolute;
+    top:20px;
+    right:20px;
+}
+#game-over-layer{
+    background-color: black;
+    position: absolute;
+    top:-100vh;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    transition:transform 2s;
+}
+#game-over-layer.transform{
+    transform: translateY(100vh);
+}
+.game-over{
+    position: absolute;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 50%;
+}
+#game-over-layer .restart-button{
+    position: absolute;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 63%;
+    font-size: 16px;
+}
+#game-start-layer{
+    background-image: url('../images/overworld_bg_plain1.png');
+    position: absolute;
+    z-index:100;
+    width: 100%;
+    height: 100%;
+    transition:transform 2s;
+    background-size: cover;
+    top:0;
+}
+#game-start-layer .restart-button{
+    position: absolute;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 63%;
+    font-size: 16px;
+}
+#game-start-layer .transform{
+    transform: translateY(-100vh);
 }
